--- a/index.html
+++ b/index.html
@@ -1,75 +1,12 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logística IA - Intelligent Fleet Control</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #050a14;
-            color: #ffffff;
-            margin: 0;
-            overflow-x: hidden;
-        }
-        .bg-cyber-dark {
-            background-color: #050a14;
-        }
-        .bg-cyber-card {
-            background-color: rgba(16, 23, 42, 0.8);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(37, 99, 235, 0.1);
-        }
-        .text-cyber-blue {
-            color: #3b82f6;
-        }
-        .border-cyber-blue {
-            border-color: #2563eb;
-        }
-        .shadow-cyber-glow {
-            box-shadow: 0 0 15px rgba(37, 99, 235, 0.2);
-        }
-        .btn-cyber-primary {
-            background: linear-gradient(90deg, #2563eb 0%, #1d4ed8 100%);
-            transition: all 0.3s ease;
-        }
-        .btn-cyber-primary:hover {
-            box-shadow: 0 0 20px rgba(37, 99, 235, 0.4);
-            transform: translateY(-1px);
-        }
-        /* Custom scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #050a14;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #1e293b;
-            border-radius: 4px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #334155;
-        }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
-<body class="bg-cyber-dark antialiased">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Taller JB</title>
+  </head>
+  <body>
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
